# statkitcpp

./: .clang-tidy  .gitignore  CMakeLists.txt  MANIFEST.IN  README.md  pyproject.toml  setup.py
examples/: example.py  example2.py  example3.py  example4.py  example5.py
python-tests/autograd/: test_autograd_agg.py  test_autograd_binary.py  test_autograd_hard.py  test_autograd_indexing.py  test_autograd_pointwise.py  test_autograd_scalar.py
python-tests/tensors/: test_aggregation_ops.py  test_indexing.py  test_linalg_ops.py  test_operations.py  test_pointwise_ops.py  test_views.py
statkitcpp/: CMakeLists.txt  __init__.py  __init__.pyi  bindings.cpp  bindings_defines.h  wrapper.py
statkitcpp/core/: config.h  datatypes.h  errors.h  include_fwd.h  tensor.cpp  tensor.h
statkitcpp/core/_autograd/: AggregationOperations.cpp  BinaryOperations.cpp  IndexingOperations.cpp  LinalgOperations.cpp  Node.cpp  Node.h  PointwiseOperations.cpp  TensorOperations.cpp  autograd.cpp  autograd.h  operations.cpp  operations.h
statkitcpp/core/_tensor/: Scalar.cpp  Scalar.h  ScalarType.cpp  ScalarType.h  Slice.h  Storage.cpp  Storage.h  Tensor.cpp  Tensor.h  TensorCreationOps.cpp  TensorCreationOps.h  TensorImpl.cpp  TensorImpl.h  TensorIndex.h  TensorIterator.cpp  TensorIterator.h  TensorOperations.cpp  shape.cpp  shape.h  slice.h  tensor.cpp  tensor.h  tensor_cast.h  tensor_creation_ops.cpp  tensor_creation_ops.h  tensor_defines.h  variable.h
statkitcpp/core/_tensor/operations/: MaxDeriv.h  Mean.h  Operations.cpp  Operations.h  PointwiseOperations.cpp  Prod.h  Sum.h  TensorOperations.cpp  Var.h  binary_ops_memory.h  function_objects.h  indexing_ops.h  memory_ops.h  promote_type.h
statkitcpp/core/_tensor/operations/backend/: IndexingOperations.cpp  LinalgOperations.cpp  Operations.cpp  OptimizedOperations.cpp  TensorOperations.cpp
statkitcpp/core/_tensor/operations/ops_headers/: Max.h  Mean.h  Min.h  MinDeriv.h  Sum.h  Var.h
statkitcpp/core/_tensor/operations/vectorized/: indexing_vectorized.h  linalg_vectorized.h  vectorized.cpp  vectorized.h  views_vectorized.h
statkitcpp/core/_utils/: UFunc.h
statkitcpp/core/dispatcher/: cpy_casts.h  creation_operations.h  dispatcher_defines.h  tensor_dispatcher.h
statkitcpp/python/: tensor_ops.py  tensor_wrapper.py
statkitcpp/utils/: Array.h  DimMask.h  utils.h
tests/: CMakeLists.txt
tests/tensors/: test_aggregate_ops.cpp  test_arithmetic_ops.cpp  test_autograd.cpp  test_broadcast.cpp  test_linalg.cpp  test_repr.cpp  test_tensor_info.cpp  test_tensor_ops.cpp  test_views.cpp
tools/cmake/: TestSolution.cmake
